maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: value unary_! is not a member of plm.universe.Direction
	while(!getDirection!=Direction.NORTH)
              ^