maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall() {
	while(!estFaceMur) {
		avance
		gauche
	}
	droite
}
 // longe le mur à gauche
 
while(!estFaceMur) {
		gauche
	}
	droite//mets en postion pour longer a gauche
	
while(getY!=0) {
	while(getDirection!=Direction.NORTH) {
		droite
	}
	while(!estFaceMur) {
		avance
	}
	while(!getDirection!=Direction.NORTH)
	keepHandOnSideWall()
} // trouve le mur nord

droite
while(!estFaceMur) {
		gauche
	}
	droite
while(!estSurBiscuit) {
	keepHandOnSideWall()
}
prendBiscuit
}
